tests/security/taintFromAwaitedAbstractMethod/output.txt
ERROR: TaintedData - input.hack:40:18 - Data from a URL query string found its way to an HTML tag